--- a/menu/css_menu/search.css
+++ b/menu/css_menu/search.css
@@ -3,7 +3,7 @@
 	padding: 0;
 }
 body{
-	background-color: #85a1c1;
+	background-color: #aaafb9;
 	overflow-x: hidden;
 }
 header{
@@ -77,4 +77,138 @@ a{
 }
 .a_menu_3{
 	left: 30vw;
+}
+.search{
+	width: 100vw;
+	height: 30vh;
+	background: #c4d0d9;
+	border-bottom: 10px solid black;
+}
+.pl{
+	width: auto;
+	height: 10vh;
+	margin-top: 10vh;
+	margin-left: 9vw;
+	position: absolute;
+}
+input{
+	width: 15vw;
+	margin: 0;	
+	height: 10vh;
+	border: none;
+	outline: none;
+	font-family: ‘Open Sans’, sans-serif;
+	color: #3f4d63;
+	padding: 5px;
+}
+.b1{
+	width: 10vw;
+	height: 10vh;
+	font-family: ‘Open Sans’, sans-serif;
+	font-size: 30px;
+	border: none;
+	position: relative;
+	top: -1vh;
+	background: #9d9c9a;
+}
+.pas{
+	width: 5vw;
+	text-align: center;
+	font-family: ‘Open Sans’, sans-serif;
+	font-size: 50px;
+	position: relative;
+	top: -0.3vh;	
+	height: 10vh;
+}
+.in_date{
+	font-size: 35px;
+	font-family: ‘Open Sans’, sans-serif;
+	width: 13vw;
+	position: relative;
+	top: -0.9vh;
+}
+.town{
+	font-size: 3vw;
+	font-family: ‘Open Sans’, sans-serif;
+	width: 20vw;
+}
+#main{
+	width: 80vw;
+	height: auto;
+	background: #dde2e3;
+	margin-left: 10vw;
+	border-right: 3px solid black;
+	border-left: 3px solid black;
+}
+.com{
+	width: 80vw;
+	height: auto;
+}
+.s{
+	width: 40vw;
+	height: 15vh;
+	background: #c4d0d9;
+	display: inline-block;
+	border-right: 1px solid black;
+	border-top: 1px solid black;
+}
+.date_s{
+	width: 39.9vw;
+	height: 15vh;
+	background: #c4d0d9;
+	display: inline-block;
+	border-top: 1px solid black;
+}
+.p{
+	font-size: 3vw;
+	margin-top: 3.5vh;
+	text-align: center;
+}
+.p_date{
+	font-size: 2.8vw;
+	margin-top: 3.5vh;
+	text-align: center;
+}
+.knop{
+	width: 80vw;
+	height: 15vh;
+	display: inline-block;
+	background: #9d9c9a;
+	margin-bottom: 50px;
+}
+.p_knop{
+	font-size: 50px;
+}
+.numb{
+	width: 40vw;
+	height: 15vh;
+	background: #9d9c9a;
+	display: inline-block;
+	border-right: 1px solid black;
+	border-top: 1px solid black;
+}
+.saml{
+	width: 39.9vw;
+	height: 15vh;
+	background: #9d9c9a;
+	float: right;
+	display: inline-block;
+	border-top: 1px solid black;
+}
+.suum{
+	width: 39.9vw;
+	height: 15vh;
+	background: #d1d9dc;
+	float: right;
+	display: inline-block;
+	border-top: 1px solid black;
+}
+.time{
+	width: 40vw;
+	height: 15vh;
+	background: #d1d9dc;
+	color: black;
+	display: inline-block;
+	border-right: 1px solid black;
+	border-top: 1px solid black;
 }
